# ngt-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
ngt-sys/: Cargo.toml  build.rs
src/: error.rs  index.rs  lib.rs  optim.rs  optimizer.rs  properties.rs
src/ngt/: index.rs  mod.rs  optim.rs  properties.rs
src/qbg/: index.rs  mod.rs  properties.rs
src/qg/: index.rs  mod.rs  properties.rs
