[package]
name = "ngt"
version = "0.4.3"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
description = "Rust wrappers for NGT nearest neighbor search."
repository = "https://github.com/lerouxrgd/ngt-rs"
keywords = ["ngt", "knn", "ann", "optimization"]
categories = ["science"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ngt-sys = { path = "ngt-sys", version = "1.14.7" }
num_enum = "0.5"
scopeguard = "1"

[dev-dependencies]
rayon = "1"
tempfile = "3"

[features]
default = []
shared_mem = ["ngt-sys/shared_mem"]
large_data = ["ngt-sys/large_data"]
