[package]
name = "ngt"
version = "0.5.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
description = "Rust wrappers for NGT nearest neighbor search."
repository = "https://github.com/lerouxrgd/ngt-rs"
keywords = ["ngt", "knn", "ann", "optimization"]
categories = ["science"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ngt-sys = { path = "ngt-sys", version = "2.0.11" }
num_enum = "0.5"
scopeguard = "1"

[dev-dependencies]
rayon = "1"
tempfile = "3"

[features]
default = ["quantized"] # TODO: should not be default
static = ["ngt-sys/static"]
shared_mem = ["ngt-sys/shared_mem"]
large_data = ["ngt-sys/large_data"]
quantized = ["ngt-sys/quantized"]
