[package]
name = "ngt"
version = "0.7.1"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
description = "Rust wrappers for NGT nearest neighbor search."
repository = "https://github.com/lerouxrgd/ngt-rs"
keywords = ["ngt", "knn", "ann", "optimization"]
categories = ["science"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
half = "2"
ngt-sys = { path = "ngt-sys", version = "2.1.6" }
num_enum = "0.7"
scopeguard = "1"

[dev-dependencies]
rand = "0.8"
rayon = "1"
tempfile = "3"

[features]
static = ["ngt-sys/static"]
shared_mem = ["ngt-sys/shared_mem"]
large_data = ["ngt-sys/large_data"]
quantized = ["ngt-sys/quantized"]
qg_optim = ["quantized", "ngt-sys/qg_optim"]

[package.metadata.docs.rs]
features = ["quantized"]
rustdoc-args = ["--cfg", "docsrs"]
