[package]
name = "ngt-sys"
version = "1.11.4"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"
links = "ngt"
description = "Native bindings to the NGT library."
repository = "https://github.com/lerouxrgd/ngt-rs"
keywords = ["ngt", "knn", "ann", "optimization"]
categories = ["science"]
license = "Apache License 2.0"

[build-dependencies]
bindgen = "0.53"
cmake = "0.1"

[features]
shared_mem = []
large_data = []