[package]
name = "ngt-sys"
version = "1.13.8"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"
links = "ngt"
description = "Native bindings to the NGT library."
repository = "https://github.com/lerouxrgd/ngt-rs"
keywords = ["ngt", "knn", "ann", "optimization"]
categories = ["science"]
license = "Apache-2.0"

[build-dependencies]
bindgen = "0.57"
cmake = "0.1"

[features]
shared_mem = []
large_data = []