[package]
name = "ngt-sys"
version = "2.0.11"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
links = "ngt"
description = "Native bindings to the NGT library."
repository = "https://github.com/lerouxrgd/ngt-rs"
keywords = ["ngt", "knn", "ann", "optimization"]
categories = ["science"]
license = "Apache-2.0"

[build-dependencies]
bindgen = "0.60"
cmake = "0.1"
cpp_build = { version = "0.5", optional = true }

[features]
static = ["dep:cpp_build"]
shared_mem = []
large_data = []
quantized = []
